--- a/journal/templates/staff_signup.html
+++ b/journal/templates/staff_signup.html
@@ -1,68 +1,130 @@
-<!--<!DOCTYPE html>-->
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>HTML5 Login Form with validation Example</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <!--    <link rel="stylesheet" href="../static/css/style.css">-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body, html {
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
+* {
+  box-sizing: border-box;
+}
+
+.bg-img {
+  /* The image used */
+  background-image: url("img_nature.jpg");
+
+  min-height: 380px;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Add styles to the form container */
+.container {
+  margin: auto;
+  width: 50%;
+  max-width: 600px;
+  border: 3px solid rgb(0, 10, 0);
+  padding: 50px; /* Adjusted padding for better appearance */
+  background-color: white;
+}
+
+/* Full-width input fields */
+input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="date"], select {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 15px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="date"]:focus, select:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit button */
+.btn {
+  background-color: #08a76d;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+/* Adjusted styles for dropdown */
+.container select {
+  padding: 15px;
+}
+
+/* Laptop view */
+@media (min-width: 992px) {
+  .container {
+    width: 40%;
+  }
+}
+
+/* Mobile view */
+@media (max-width: 767px) {
+  .container {
+    width: 80%;
+    padding: 20px;
+  }
+}
+</style>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div id="login-form-wrap">
-    <h2>Login</h2>
-    <form id="login-form" method="post">
-        {% csrf_token %}
-        {% if form.errors %}
-        <div class="col-12 register-field">
-            <div class="alert alert-block alert-danger">
-                <ul>
-                    <li>
-                        Please enter a correct username and password. Note that both fields may be case-sensitive.
-                    </li>
-                    <li>
-                        Username and password should not be similar
-                    </li>
-                </ul>
-            </div>
-        </div>
-        {% endif %}
-        <p>
-            <input type="text" id="name" name="name" placeholder="Full Name" required><i
-                class="validation"><span></span><span></span></i>
-        </p>
-        <p>
-            <input type="text" id="username" name="username" placeholder="Username" required><i
-                class="validation"><span></span><span></span></i>
-        </p>
-        <p>
-            <input type="email" id="mail_id" name="mail_id" placeholder="Mail" required><i
-                class="validation"><span></span><span></span></i>
-        </p>
-        <p>
-            <input type="text" id="phone_number" name="phone_number" placeholder="Phone Number" required><i
-                class="validation"><span></span><span></span></i>
-        </p>
-        <p>
-            <input type="text" id="staff_id" name="staff_id" placeholder="Staff Id" required><i
-                class="validation"><span></span><span></span></i>
-        </p>
-        <p>
-            <input type="date" id="date_joined" name="date_joined" placeholder="Date Joined" required><i
-                class="validation"><span></span><span></span></i>
-        </p>
-        <p>
-            <input type="password" id="password1" name="password1" placeholder="Password" required><i
-                class="validation"><span></span><span></span></i>
-        </p>
-        <p>
-            <input type="password" id="password2" name="password2" placeholder="Confirm Password" required><i
-                class="validation"><span></span><span></span></i>
-        </p>
-        <p>
-            <input type="submit" id="signup" value="Sign Up">
-        </p>
-    </form>
-</div><!--login-form-wrap-->
+
+<h2></h2>
+<div class="bg-img">
+  <form action=" " class="container">
+    <h1>User Login</h1>
+    <label for="name"><b>Full Name</b></label>
+    <input type="text" placeholder="Full Name" name="name" required>
+
+    <label for="email"><b>Email</b></label>
+    <input type="email" placeholder="Enter Email" name="email" required>
+
+    <label for="user"><b>Username</b></label>
+    <input type="text" placeholder="Username" name="user" required>
+
+    <label for="staffId"><b>Staff Id</b></label>
+    <input type="text" placeholder="Staff Id" name="staffId" required>
+
+    <label for="number"><b>Phone Number</b></label>
+    <input type="text" placeholder="+91" name="number" required>
+
+    <label for="dob"><b>Date of Birth</b></label>
+    <input type="date" name="dob" required>
+
+    <label for="department"><b>Department</b></label>
+    <select name="department" required>
+      <option value="" disabled selected>Select department</option>
+      <option value="CSE">CSE</option>
+      <option value="ECE">ECE</option>
+      <option value="EEE">EEE</option>
+      <option value="AIDS">AIDS</option>
+      <option value="MECH">MECH</option>
+      <option value="MECHO">MECHO</option>
+    </select>
+
+    <button type="submit" class="btn">Login</button>
+  </form>
+</div>
+
 </body>
 </html>
