--- a/journal/templates/index.html
+++ b/journal/templates/index.html
@@ -63,20 +63,19 @@ input[type="text"], input[type="password"] {
 </style>
 </head>
 <body>
-
 <div class="bg-img">
-  <form action=" " class="container">
-    <h1>Admin Login</h1>
+  <form action=" " class="container" method="post">
+    {% csrf_token %}
+    <h1>Staff Login</h1>
 
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
+    <label for="username"><b>Email</b></label>
+    <input type="text" id="username" placeholder="Enter Username" name="username" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" id="psw" placeholder="Enter Password" name="password" required>
 
     <button type="submit" class="btn">Login</button>
   </form>
 </div>
-
 </body>
 </html>
