--- a/journal/templates/staff_signup.html
+++ b/journal/templates/staff_signup.html
@@ -32,9 +32,10 @@ body, html {
   margin: auto;
   width: 50%;
   max-width: 600px;
-  border: 3px solid rgb(0, 10, 0);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 50px; /* Adjusted padding for better appearance */
   background-color: white;
+  border-radius: 10px;
 }
 
 /* Full-width input fields */
@@ -44,6 +45,7 @@ input[type="text"], input[type="password"], input[type="email"], input[type="num
   margin: 5px 0 15px 0;
   border: none;
   background: #f1f1f1;
+  border-radius: 5px;
 }
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="date"]:focus, select:focus {
@@ -60,6 +62,7 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
   cursor: pointer;
   width: 100%;
   opacity: 0.9;
+  border-radius: 5px;
 }
 
 .btn:hover {
