--- a/journal/templates/staff_home.html
+++ b/journal/templates/staff_home.html
@@ -80,8 +80,9 @@
                 <td>Computer Science</td>
                 <td><a href="#">View</a></td>
             </tr>
-            <!-- Add more rows as needed -->
         </table>
+        <br>
+        <a type="button" href="{% url 'upload_journal' %}">Upload Journal</a>
     </div>
 </body>
 </html>
