--- a/journal/templates/admin_dashboard.html
+++ b/journal/templates/admin_dashboard.html
@@ -201,6 +201,7 @@
                 {% endfor %}
                 </tbody>
             </table>
+            <a type="button" href="{% url 'add_department' %}"> add Dept</a>
         </div>
     </div>
 </div>
