--- a/journal/templates/journal_form.html
+++ b/journal/templates/journal_form.html
@@ -57,7 +57,8 @@
 </head>
 <body>
     <h1>Journal Submission Form</h1>
-    <form action="process_form.php" method="post" enctype="multipart/form-data">
+    <form action="{% url 'upload_journal' %}" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
         <label for="journalTitle">Journal Title:</label>
         <input type="text" id="journalTitle" name="journalTitle" required><br><br>
 
@@ -67,14 +68,11 @@
         <label for="publisher">Publisher:</label>
         <input type="text" id="publisher" name="publisher" required><br><br>
 
-        <label for="staffName">Staff Name:</label>
-        <input type="text" id="staffName" name="staffName" required><br><br>
-
         <label for="department">Department:</label>
         <input type="text" id="department" name="department" required><br><br>
 
-        <label for="fileUpload">Upload File:</label>
-        <input type="file" id="fileUpload" name="fileUpload" accept=".pdf, .doc, .docx" required><br><br>
+        <label for="journalFile">Upload File:</label>
+        <input type="file" id="journalFile" name="journalFile" accept=".pdf, .doc, .docx" required><br><br>
 
         <input type="submit" value="Submit">
     </form>
