html update button

--- a/journal/templates/admin_dashboard.html
+++ b/journal/templates/admin_dashboard.html
@@ -7,7 +7,8 @@
     <title>Admin Dashboard</title>
     <style>
         .dashboard {
-            padding: 20px;
+
+            padding: 50px;
             background-color: #f4f4f4;
         }
 
@@ -78,6 +79,20 @@
         }
 
         .journal-table a:hover {
+            background-color: #0056b3;
+        }
+         a {
+            margin-top: 5px;
+            text-decoration: none;
+            background-color: #007bff;
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            display: inline-block;
+            transition: background-color 0.3s ease;
+        }
+
+        a:hover {
             background-color: #0056b3;
         }
         .table-container {
