--- a/journal/templates/staff_home.html
+++ b/journal/templates/staff_home.html
@@ -19,6 +19,20 @@
             text-align: center;
             padding: 1rem 0;
         }
+        a {
+            margin-top: 5px;
+            text-decoration: none;
+            background-color: #007bff;
+            color: #fff;
+            padding: 5px 10px;
+            border-radius: 5px;
+            display: inline-block;
+            transition: background-color 0.3s ease;
+        }
+
+        a:hover {
+            background-color: #0056b3;
+        }
 
         .container {
             max-width: 800px;
