--- a/journal/templates/admin_dashboard.html
+++ b/journal/templates/admin_dashboard.html
@@ -216,7 +216,7 @@
                 {% endfor %}
                 </tbody>
             </table>
-            <a type="button" href="{% url 'add_department' %}"> add Dept</a>
+            <a type="button" href="{% url 'add_department' %}">Add Department</a>
         </div>
     </div>
 </div>
