--- a/journal/templates/journal_form.html
+++ b/journal/templates/journal_form.html
@@ -25,9 +25,27 @@
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         }
+        .logout {
+            text-decoration: none;
+            color: #fff;
+
+
+            background-color: #4caf50;
+            padding: 5px 20px;
+            border: none;
+            border-radius: 5px;
+        }
 
         label {
             font-weight: bold;
+        }
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+            margin-left: 3rem;
+            margin-right: 3rem;
         }
 
         input[type="text"],
@@ -56,7 +74,10 @@
     </style>
 </head>
 <body>
+<div class="header">
     <h1>Journal Submission Form</h1>
+    <a href="{% url 'logout' %}" class="logout">Logout</a>
+</div>
     <form action="{% url 'upload_journal' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <label for="journalTitle">Journal Title:</label>
